src/test/ui/const-generics/issues/issue-63322-forbid-dyn.min.stderr
error: `&'static (dyn A + 'static)` is forbidden as the type of a const generic parameter
  --> $DIR/issue-63322-forbid-dyn.rs:9:18
   |
LL | fn test<const T: &'static dyn A>() {
   |                  ^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error[E0741]: `&'static (dyn A + 'static)` must be annotated with `#[derive(PartialEq, Eq)]` to be used as the type of a const parameter
  --> $DIR/issue-63322-forbid-dyn.rs:9:18
   |
LL | fn test<const T: &'static dyn A>() {
   |                  ^^^^^^^^^^^^^^ `&'static (dyn A + 'static)` doesn't derive both `PartialEq` and `Eq`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0741`.
